2004-10-21  Derek Price  <derek@ximbiot.com>

	* config.h.in.in (HAVE_OS_H): Undef this on Windoze.

2004-10-20  Derek Price  <derek@ximbiot.com>

	* config.h.in.in (select): Undef this for new sunos57-select.

2004-10-20  Mark D. Baushke  <mdb@cvshome.org>

	* Makefile.in: Regenerate for new configure.in.

2004-10-15  Derek Price  <derek@ximbiot.com>

	* config.h.in.in (HAVE_VASPRINTF): Define this for GNULIB.

2004-10-11  Conrad T. Pino  <Conrad@Pino.com>

	* config.h.in.in: Add #undef for "HAVE_STDIO_EXT_H", "HAVE_STRCASECMP",
	"HAVE_STRNCASECMP", "HAVE_WMEMCHR" and "HAVE_WMEMCPY".

2004-10-09  Derek Price  <derek@ximbiot.com>

	* config.h.in.in (HAVE_DECL_FREE): Remove this define.

2004-10-09  Derek Price  <derek@ximbiot.com>

	* config.h.in.in (optopt, optind, optarg): Define these for GNULIB.

2004-10-07  Derek Price  <derek@ximbiot.com>

	* Makefile.am (EXTRA_DIST): Remove stripslash.c.

2004-10-06  Derek Price  <derek@ximbiot.com>

	* mkconfig.pl: Check definition is defined, not false, before deciding
	not to print it.

2004-10-06  Derek Price  <derek@ximbiot.com>

	Use getpass proto from getpass.h.
	* config.h.in.in: Undo last defn.
	* unistd.h (getpass): Remove proto.

2004-10-06  Derek Price  <derek@ximbiot.com>

	* config.h.in.in: Tell compiler we have a decl for getpass().

2004-10-06  Derek Price  <derek@ximbiot.com>

	* config.h.in.in: Define use of replacement getopt functions.

2004-10-06  Derek Price  <derek@ximbiot.com>

	* config.h.in.in: Undef HAVE_GETOPT_H and HAVE_GETOPT_LONG_ONLY.  It
	sounds like a fairly safe bet that Windoze doesn't have them.

2004-10-06  Mark D. Baushke  <mdb@cvshome.org>

	* unistd.h: Add prototype entries for chdir and close

2004-10-05  Derek Price  <derek@ximbiot.com>

	* config.h.in.in: s/FILESYSTEM/FILE_SYSTEM/ in keeping with GNULIB.
	
2004-10-05  Conrad T. Pino  <Conrad@Pino.com>

	* config.h.in.in: Add #define EOVERFLOW, HAVE_GETCWD, HAVE_GETCWD_NULL.
	* config.h.in: Regenerated for "config.h.in.in" change.
